Rename class Algorithms to UsefulMethods. Added new XmlParser class for xml analysis. Removed xml classes for the ANTLR library. Two new fields checkXml and showZeroScore were added to the Form class. Added method to AdviceController to handle FileNotFoundException. Added logic to the FileUploadController for uploading multiple archives to the server. Added saving and loading of two new fields checkXml and showZeroScore to localStorage in index.js. A new page table.htlm has been added to display the archives being checked.